--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,5 +3,8 @@
     "react": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1"
+  },
+  "scripts": {
+    "start": "node src/App.jsx"
   }
 }
